--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
+    "redux-logger": "^3.0.6",
     "sinon": "^6.1.4"
   },
   "scripts": {
