--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.22.0",
     "chai": "^4.1.2",
-    "enzyme": "^3.3.0",
+    "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "expect": "^1.20.2",
     "mocha-multi": "^1.0.1",
@@ -31,7 +31,8 @@
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
-    "sinon": "^6.1.4"
+    "sinon": "^6.1.4",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
