--- a/package.json
+++ b/package.json
@@ -27,11 +27,12 @@
     "enzyme-adapter-react-16": "^1.1.1",
     "expect": "^1.20.2",
     "mocha-multi": "^1.0.1",
-    "react": "^16.4.1",
+    "react": "^16.8.6",
     "react-dom": "^16.4.1",
-    "react-redux": "^5.0.7",
-    "redux": "^4.0.0",
-    "sinon": "^6.1.4"
+    "react-redux": "^5.1.1",
+    "redux": "^4.0.1",
+    "sinon": "^6.1.4",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
