--- a/package.json
+++ b/package.json
@@ -13,9 +13,8 @@
   "devDependencies": {
     "jsdom": "^9.9.1",
     "mocha": "^5.2.0",
-    "react-scripts": "1.1.4",
-    "webpack": "^3.9.0",
-    "webpack-dev-server": "^2.9.0"
+    "react-scripts": "^3.1.1",
+    "webpack-dev-server": "^2.11.5"
   },
   "dependencies": {
     "babel-core": "^6.22.1",
@@ -31,7 +30,8 @@
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
-    "sinon": "^6.1.4"
+    "sinon": "^6.1.4",
+    "yarn": "^1.17.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,5 +40,17 @@
     "dev:hot": "webpack-dev-server --hot --inline --progress --colors --watch --display-error-details --display-cached --content-base ./",
     "test:watch": "npm run test -- --watch",
     "eject": "react-scripts eject"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
