--- a/package.json
+++ b/package.json
@@ -12,26 +12,26 @@
   },
   "devDependencies": {
     "jsdom": "^9.9.1",
-    "mocha": "^5.2.0",
-    "react-scripts": "1.1.4",
-    "webpack": "^3.9.0",
-    "webpack-dev-server": "^3.1.11"
+    "mocha": "^7.2.0",
+    "react-scripts": "^3.4.1",
+    "webpack": "^4.43.0",
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
     "babel-core": "^6.22.1",
-    "babel-preset-airbnb": "^2.5.2",
+    "babel-preset-airbnb": "^2.6.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.22.0",
-    "chai": "^4.1.2",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
+    "chai": "^4.2.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "expect": "^1.20.2",
-    "mocha-multi": "^1.0.1",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-redux": "^5.0.7",
-    "redux": "^4.0.0",
-    "sinon": "^6.1.4"
+    "mocha-multi": "^1.1.3",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-redux": "^5.1.2",
+    "redux": "^4.0.5",
+    "sinon": "^6.3.5"
   },
   "scripts": {
     "start": "react-scripts start",
