--- a/package.json
+++ b/package.json
@@ -13,9 +13,8 @@
   "devDependencies": {
     "jsdom": "^9.9.1",
     "mocha": "^5.2.0",
-    "react-scripts": "1.1.4",
-    "webpack": "^3.9.0",
-    "webpack-dev-server": "^3.1.11"
+    "react-scripts": "^3.4.4",
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
     "babel-core": "^6.22.1",
@@ -24,7 +23,7 @@
     "babel-preset-stage-0": "^6.22.0",
     "chai": "^4.1.2",
     "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-adapter-react-16": "^1.15.5",
     "expect": "^1.20.2",
     "mocha-multi": "^1.0.1",
     "react": "^16.4.1",
@@ -40,5 +39,17 @@
     "dev:hot": "webpack-dev-server --hot --inline --progress --colors --watch --display-error-details --display-cached --content-base ./",
     "test:watch": "npm run test -- --watch",
     "eject": "react-scripts eject"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
